# freeLib

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build on Ubuntu 20.04.yml  build on Ubuntu 22.04.yml  build on Ubuntu 24.04.yml  cmake-single-platform.yml
KindleGen_Mac/: manual.html  Сокращенный конспект лекций.doc
KindleGen_Mac/docs/chinese/: Readme.txt  Release Notes.html
KindleGen_Mac/docs/german/: Bittelesen.txt
KindleGen_Mac/docs/italian/: Leggimi.txt
KindleGen_Mac/docs/japanese/: Readme.txt
KindleGen_Mac/docs/spanish/: Leerme.txt  Notas de la version.html
data/: freelib.appdata.xml  freelib.desktop
debian-maintainer/: fl-prepare.sh
debian-maintainer/DEBIAN/: control
debian-maintainer/doc/freelib/: copyright  license
freeLib/: Lib_linux.pro  Lib_mac.pro  Lib_win.pro  install_win.iss
freeLib/Debug/: .qmake.stash  Makefile  moc_aboutdialog.cpp  moc_addlibrary.cpp  moc_bookeditdlg.cpp  moc_dropform.cpp  moc_emailaddress.cpp  moc_exportdlg.cpp  moc_exportframe.cpp  moc_exportthread.cpp  moc_fb2mobi.cpp  moc_filenamelineedit.cpp  moc_fontframe.cpp  moc_helpdialog.cpp  moc_importthread.cpp  moc_libwizard.cpp  moc_mainwindow.cpp  moc_mimeattachment.cpp  moc_mimecontentformatter.cpp  moc_mimefile.cpp  moc_mimehtml.cpp  moc_mimemultipart.cpp  moc_mimepart.cpp  moc_myapplicationclass.cpp  moc_opds_server.cpp  moc_quagzipfile.cpp  moc_quaziodevice.cpp  moc_quazipfile.cpp  moc_quotedprintable.cpp  moc_settingsdlg.cpp  moc_smtpclient.cpp  moc_tagdialog.cpp  qrc_resource.cpp  ui_aboutdialog.h  ui_addlibrary.h  ui_bookeditdlg.h  ui_dropform.h  ui_exportdlg.h  ui_exportframe.h  ui_fontframe.h  (+5 more)
freeLib/Debug/Help/: cmd_params.html  donate.html  help.komodoproject  params.html  style.css
freeLib/Debug/xsl/hyphenations/: de.txt  uk.txt
freeLib/Debug/xsl/img/: h1tb.txt
freeLib/data/: CMakeLists.txt  freelib.desktop
freeLib/src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addlibrary.cpp  addlibrary.h  addlibrary.ui  bookeditdlg.h  build_number.h  build_number.sh  common.h  config-freelib.h.cmake  coverlabel.cpp  coverlabel.h  djvu.cpp  djvu.h  dropform.cpp  dropform.h  dropform.ui  exportdlg.cpp  exportdlg.h  exportdlg.ui  exportframe.cpp  exportframe.h  exportframe.ui  exportthread.cpp  exportthread.h  filenamelineedit.cpp  filenamelineedit.h  fontframe.cpp  fontframe.h  fontframe.ui  freeLib.sqlite  genresortfilterproxymodel.cpp  git-info.h.cmake  helpdialog.cpp  helpdialog.h  helpdialog.ui  importthread.cpp  importthread.h  (+52 more)
freeLib/src/ABC/: abc_uk.txt
freeLib/src/Help/: CMakeLists.txt  about.md  changelog.html  changelog.md  cmd_params.html  cmd_params.md  donate_hlp.html  index.html  params.html  params.md  script.js  style.css
freeLib/src/SmtpClient/: mimeattachment.cpp  mimeattachment.h  mimefile.cpp  mimefile.h  mimemultipart.h  smtpclient.cpp  smtpclient.h
freeLib/src/SmtpClient/demos/: demo1.cpp
freeLib/src/fb2mobi/: fb2mobi.cpp  fb2mobi.h  hyphenations.cpp  hyphenations.h
freeLib/src/mobiEdit/: mobiedit.cpp
freeLib/src/quazip/quazip/: quazip.pro
freeLib/src/xsl/hyphenations/: ru.txt
freeLib/src/xsl/img/: h0ta.txt  te.txt
kindlegen_win32/: Readme.txt
kindlegen_win32/docs/english/: Release Notes.html
kindlegen_win32/docs/french/: Lisez-moi.txt  Notes de version.html
kindlegen_win32/docs/german/: Versionshinweis.html
kindlegen_win32/docs/italian/: Note di pubblicazione.html
kindlegen_win32/docs/japanese/: Release Notes.html
src/: CMakeLists.txt  Info.plist  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bookeditdlg.cpp  bookeditdlg.ui  bookfile.cpp  bookfile.h  config-freelib.h.cmake  conversionframe.cpp  conversionframe.h  conversionframe.ui  coverlabel.cpp  coverlabel.h  djvu.cpp  epubreader.cpp  epubreader.h  exportdlg.cpp  exportdlg.h  exportdlg.ui  exportframe.cpp  exportframe.h  exportframe.ui  exportframe_old.ui  exportthread.cpp  exportthread.h  filelineedit.cpp  filelineedit.h  fontframe.cpp  fontframe.ui  freeLib.sqlite  genre.tsv  genresortfilterproxymodel.cpp  genresortfilterproxymodel.h  helpdialog.cpp  importthread.cpp  importthread.h  language_en.ts  language_ru.qm  (+40 more)
src/Help/: about.md  changelog.md  cmd_params.md  params.md
src/designer_plugin/: CMakeLists.txt  filelineedit.json  filelineedit.plugin.cpp  filelineedit.plugin.h
src/fb2mobi/: fb2mobi.cpp  fb2mobi.h  hyphenations.cpp
src/mobiEdit/: mobiedit.cpp  mobiedit.h
src/xsl/css/: style.css
src/xsl/hyphenations/: en.txt
src/xsl/img/: h1ta.txt
src/xsl/opds/: scripts.js  styles.css
